// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns Correctly update references On addition 1`] = `
{
  "A1": {
    "content": "=D1",
    "value": 0,
  },
  "A2": {
    "content": "=Sheet1!D1",
    "value": 0,
  },
  "A3": {
    "content": "=Sheet2!B1",
    "value": 0,
  },
  "A5": {
    "content": "=SUM(A1:F1)",
    "value": 0,
  },
  "A6": {
    "content": "=SUM(E1:F1)",
    "value": 0,
  },
  "A7": {
    "content": "=SUM(D1:D2)",
    "value": 0,
  },
  "F1": {
    "content": "=A1",
    "value": 0,
  },
  "F2": {
    "content": "=D1",
    "value": 0,
  },
  "F3": {
    "content": "=$G1",
    "value": 0,
  },
  "F4": {
    "content": "=F3",
    "value": 0,
  },
}
`;

exports[`Columns Correctly update references On addition 2`] = `
{
  "A1": {
    "content": "=B1",
    "value": 0,
  },
  "A2": {
    "content": "=Sheet1!D1",
    "value": 0,
  },
  "A3": {
    "content": "=Sheet2!B1",
    "value": 0,
  },
}
`;

exports[`Columns Correctly update references On deletion 1`] = `
{
  "A1": {
    "content": "=#REF",
    "value": "#REF",
  },
  "A2": {
    "content": "=#REF",
    "value": "#REF",
  },
  "A3": {
    "content": "=Sheet2!B1",
    "value": 0,
  },
  "A5": {
    "content": "=SUM(A1:B1)",
    "value": "#REF",
  },
  "A6": {
    "content": "=SUM(B1)",
    "value": "#REF",
  },
  "A7": {
    "content": "=SUM(#REF)",
    "value": "#REF",
  },
  "B1": {
    "content": "=A1",
    "value": "#REF",
  },
  "B2": {
    "content": "=#REF",
    "value": "#REF",
  },
  "B3": {
    "content": "=$C1",
    "value": 0,
  },
  "B4": {
    "content": "=B3",
    "value": 0,
  },
}
`;

exports[`Columns Correctly update references On deletion 2`] = `
{
  "A1": {
    "content": "=B1",
    "value": 0,
  },
  "A2": {
    "content": "=#REF",
    "value": "#REF",
  },
  "A3": {
    "content": "=Sheet2!B1",
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references On addition 1`] = `
{
  "A1": {
    "content": "=A4",
    "value": 0,
  },
  "A6": {
    "content": "=A1",
    "value": 0,
  },
  "B1": {
    "content": "=Sheet1!A4",
    "value": 0,
  },
  "B6": {
    "content": "=B1",
    "value": 0,
  },
  "C1": {
    "content": "=Sheet2!A2",
    "value": 0,
  },
  "C6": {
    "content": "=A$7",
    "value": 0,
  },
  "D6": {
    "content": "=C6",
    "value": 0,
  },
  "E1": {
    "content": "=SUM(A1:A6)",
    "value": 0,
  },
  "F1": {
    "content": "=SUM(A5:A6)",
    "value": 0,
  },
  "G1": {
    "content": "=SUM(B4:C4)",
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references On addition 2`] = `
{
  "A1": {
    "content": "=A2",
    "value": 0,
  },
  "B1": {
    "content": "=Sheet1!A4",
    "value": 0,
  },
  "C1": {
    "content": "=Sheet2!A2",
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references On deletion 1`] = `
{
  "A1": {
    "content": "=#REF",
    "value": "#REF",
  },
  "A2": {
    "content": "=A1",
    "value": "#REF",
  },
  "B1": {
    "content": "=#REF",
    "value": "#REF",
  },
  "B2": {
    "content": "=B1",
    "value": "#REF",
  },
  "C1": {
    "content": "=Sheet2!A2",
    "value": 0,
  },
  "C2": {
    "content": "=A$3",
    "value": 0,
  },
  "D2": {
    "content": "=C2",
    "value": 0,
  },
  "E1": {
    "content": "=SUM(A1:A2)",
    "value": "#REF",
  },
  "F1": {
    "content": "=SUM(A2)",
    "value": "#REF",
  },
  "G1": {
    "content": "=SUM(#REF)",
    "value": "#REF",
  },
}
`;

exports[`Rows Correctly update references On deletion 2`] = `
{
  "A1": {
    "content": "=A2",
    "value": 0,
  },
  "B1": {
    "content": "=#REF",
    "value": "#REF",
  },
  "C1": {
    "content": "=Sheet2!A2",
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 1`] = `
{
  "B2": {
    "content": "=Sheet1!A2",
    "value": 0,
  },
  "C1": {
    "content": "=Sheet2!A1",
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 2`] = `
{
  "A1": {
    "content": "=B1",
    "value": 0,
  },
  "B1": {
    "content": "=Sheet1!A2",
    "value": 0,
  },
  "C1": {
    "content": "=Sheet2!A1",
    "value": 0,
  },
}
`;
